--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
     
-    <title>Document</title>
+    <title>Formulário</title>
 </head>
 <body>
     <main class="container">
